# cmake-app-template

./: .version.cmake.swp  CMakeLists.txt  version.cmake
src/: CMakeLists.txt  first_class.cpp  first_class.h  main.cpp
test/: CMakeLists.txt  test.cpp
